--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,5 +1,17 @@
-% This file was created with JabRef 2.7b.
+% This file was created with JabRef 2.7.2.
 % Encoding: ISO8859_1
+
+@INPROCEEDINGS{Bell2013,
+  author = {Ian H. Bell and Sylvain Quoillin and Jorrit Wronski and Vincent Lemort},
+  title = {Coolprop: An Open-source Reference-quality Thermophysical Property
+	Library},
+  booktitle = {submitted abstract to ASME-ORC 2013 -- 2nd International Seminar
+	on ORC Power Systems},
+  year = {2013},
+  owner = {jowr},
+  timestamp = {2013.03.27},
+  url = {http://coolprop.sourceforge.net/}
+}
 
 @ARTICLE{Bendapudi2008,
   author = {Satyam Bendapudi and James E. Braun and Eckhard A. Groll},
