--- a/doc/notes.tex
+++ b/doc/notes.tex
@@ -125,7 +125,7 @@ Jorrit Wronski\\
 \item The secondary fluid is treated as an incompressible fluid
 \end{enumerate}
 \subsection{Equations}
-Thermodynamic properties are calculated using Coolprop \cite{Bell2013}. The state variable selected are $p$ and $\bar{h}$. The heat transfer coefficients ($U_\text{pf,1},U_\text{pf,2},U_\text{pf,3}$ - $U_\text{sf,1},U_\text{sf,2},U_\text{sf,3}$) are calculated using appropriate heat transfer models. Different model of void fraction ($\bar{\alpha}$) have been also implemented.\\
+Thermodynamic properties are calculated using Coolprop \cite{Bell2013}. The state variable selected are \gls{p} and \gls{hbar}. The heat transfer coefficients on primary side ($\gls{U}_{\gls{sub:pf},\gls{sub:1}}$,$\gls{U}_{\gls{sub:pf},\gls{sub:2}}$,$\gls{U}_{\gls{sub:pf},\gls{sub:3}}$) and secondary side ($\gls{U}_{\gls{sub:sf},\gls{sub:1}}$,$\gls{U}_{\gls{sub:sf},\gls{sub:2}}$,$\gls{U}_{\gls{sub:sf},\gls{sub:3}}$) are calculated using appropriate heat transfer models. Different model of void fraction \gls{alphabar} have been also implemented.\\
 \\
 \begin{center}
 {\bf SUB-COOLED ZONE}
@@ -140,23 +140,27 @@ Thermodynamic properties are calculated using Coolprop \cite{Bell2013}. The stat
 Mass balance\\
 \end{flushleft}
 \begin{equation}
-\text{A} [\text{L}_\text{1}  \cdot \frac{d \bar{\rho}_\text{1}}{d t} + (\bar{\rho}_\text{1} - \rho_\text{l}) \cdot \frac{d \text{L}_\text{1}}{d t}] = \dot{m}_\text{IN} -  \dot{m}_\text{A}
+\gls{A} \left[\gls{L}_{\gls{sub:1}}  \cdot \frac{d \gls{rhobar}_{\gls{sub:1}}}{d \gls{t}} + (\gls{rhobar}_{\gls{sub:1}} - \rho_{\gls{sub:l}}) \cdot \frac{d \gls{L}_{\gls{sub:1}}}{d \gls{t}}\right] = \gls{mdot}_{\gls{sub:in}} -  \gls{mdot}_{\gls{sub:12}}
 \end{equation}
 
 \begin{flushleft}
 Energy balance\\
 \end{flushleft}
 \begin{equation}
-\text{A}\text{L}_\text{1}[\bar{\rho}_\text{1} \cdot \frac{d \bar{h}_\text{1}}{d t} + \bar{h}_\text{1} \cdot \frac{d \bar{\rho}_\text{1}}{d t}  -  \frac{d p_\text{1}}{d t}] + \text{A}(\bar{\rho}_\text{1}\bar{h}_\text{1} - \rho_\text{l}h_\text{l})\frac{d \text{L}_\text{1}}{d t} = \dot{m}_\text{IN}  \dot{h}_\text{IN} -  \dot{m}_\text{A} \dot{h}_\text{A} + \dot{Q}_\text{r1}
+\gls{A}\gls{L}_{\gls{sub:1}}\left[
+    \gls{rhobar}_{\gls{sub:1}} \cdot \frac{d \gls{hbar}_{  \gls{sub:1}}}{d \gls{t}} 
+  + \gls{hbar}_{\gls{sub:1}}   \cdot \frac{d \gls{rhobar}_{\gls{sub:1}}}{d \gls{t}}
+  -                                  \frac{d \gls{p}_{     \gls{sub:1}}}{d \gls{t}}
+\right] + \gls{A}\left(\gls{rhobar}_{\gls{sub:1}}\gls{hbar}_{\gls{sub:1}} - \rho_{\gls{sub:l}}h_{\gls{sub:l}}\right)\frac{d \gls{L}_{\gls{sub:1}}}{d \gls{t}} = \gls{mdot}_{\gls{sub:in}}  \dot{h}_{\gls{sub:in}} -  \gls{mdot}_\text{A} \dot{h}_\text{A} + \gls{Qdot}_\text{r1}
 \end{equation}
 
 \begin{equation}
-\frac{d \bar{\rho}_\text{1}}{d t} = [ \frac{\partial \bar{\rho}_\text{1}}{\partial p_\text{1}} + \frac{1}{2} \cdot \frac{\partial \bar{\rho}_\text{1}}{\partial \bar{h}_\text{1}} \cdot \frac{\partial h_\text{l}}{\partial p_\text{1}}] \frac{d p_\text{1}}{d t} + \frac{1}{2} \cdot \frac{\partial \bar{\rho}_\text{1}}{\partial \bar{h}_\text{1}}  \cdot \frac{d h_\text{IN}}{d t}
+\frac{d \gls{rhobar}_{\gls{sub:1}}}{d t} = [ \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial p_{\gls{sub:1}}} + \frac{1}{2} \cdot \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial \gls{hbar}_{\gls{sub:1}}} \cdot \frac{\partial h_{\gls{sub:l}}}{\partial p_{\gls{sub:1}}}] \frac{d p_{\gls{sub:1}}}{d t} + \frac{1}{2} \cdot \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial \gls{hbar}_{\gls{sub:1}}}  \cdot \frac{d h_{\gls{sub:in}}}{d t}
 \end{equation}
 
 
 \begin{equation}
-\frac{d \bar{h}_\text{1}}{d t} = \frac{1}{2} \cdot [\frac{\partial \bar{h}_\text{l}}{\partial p_\text{1}} \cdot \frac{d p_\text{1}}{d t} + \frac{d h_\text{IN}}{d t}]
+\frac{d \gls{hbar}_{\gls{sub:1}}}{d t} = \frac{1}{2} \cdot [\frac{\partial \gls{hbar}_{\gls{sub:l}}}{\partial p_{\gls{sub:1}}} \cdot \frac{d p_{\gls{sub:1}}}{d t} + \frac{d h_{\gls{sub:in}}}{d t}]
 \end{equation}
 \\
 \begin{center}
@@ -164,35 +168,35 @@ Energy balance\\
 \end{center}
 
 \begin{equation}
-\bar{h}_\text{1} =  \frac{1}{2}(h_\text{IN} + {h}_\text{l})
+\gls{hbar}_{\gls{sub:1}} =  \frac{1}{2}(h_{\gls{sub:in}} + {h}_{\gls{sub:l}})
 \end{equation}
 \begin{equation}
-subcool = setState\_ph(p_\text{1},\bar{h}_\text{1})
+subcool = setState\_ph(p_{\gls{sub:1}},\gls{hbar}_{\gls{sub:1}})
 \end{equation}
 
 \begin{equation}
-sat = setSat\_p(p_\text{2})
+sat = setSat\_p(p_{\gls{sub:2}})
 \end{equation}
 \begin{equation}
-\rho_\text{l} = bubbleDensity(sat)
+\rho_{\gls{sub:l}} = bubbleDensity(sat)
 \end{equation}
 \begin{equation}
-h_\text{l} = bubbleEnthalpy(sat)
+h_{\gls{sub:l}} = bubbleEnthalpy(sat)
 \end{equation}
 \begin{equation}
-\frac{\partial \bar{h}_\text{l}}{\partial p_\text{1}}= dBubbleEnthalpy\_dPressure(sat)
+\frac{\partial \gls{hbar}_{\gls{sub:l}}}{\partial p_{\gls{sub:1}}}= dBubbleEnthalpy\_dPressure(sat)
 \end{equation}
 \begin{equation}
-\frac{\partial \bar{\rho}_\text{1}}{\partial \bar{h}_\text{1}}= density\_derh\_p(subcool)
+\frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial \gls{hbar}_{\gls{sub:1}}}= density\_derh\_p(subcool)
 \end{equation}
 \begin{equation}
-\frac{\partial \bar{\rho}_\text{1}}{\partial p_\text{1}}= density\_derp\_h(subcool)
+\frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial p_{\gls{sub:1}}}= density\_derp\_h(subcool)
 \end{equation}
 \begin{equation}
-\bar{T}_\text{1} = temperature(subcool)
+\bar{T}_{\gls{sub:1}} = temperature(subcool)
 \end{equation}
 \begin{equation}
-\dot{Q}_\text{r,1} = \pi \text{D} \text{L}_\text{1} U_\text{pf,1} (T_\text{w,1} - \bar{T}_\text{1})
+\gls{Qdot}_\text{r,1} = \pi \text{D} \gls{L}_{\gls{sub:1}} U_\text{pf,1} (T_\text{w,1} - \bar{T}_{\gls{sub:1}})
 \end{equation}
 
 %%%%%%%%%%%%% METAL WALL ZONE 1 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -205,14 +209,14 @@ h_\text{l} = bubbleEnthalpy(sat)
 Energy balance:\\
 
 \begin{equation}
-C_\text{w}(M_\text{tot} \cdot \frac{\text{L}_\text{1}}{\text{L}}) \cdot  \frac{d \text{T}_\text{w,1}}{d t} + \frac{M_\text{tot}}{\text{L}} (\text{T}_\text{w,1} - \text{T}_\text{w,12})  \frac{d \text{L}_\text{1}}{d t} = \dot{Q}_\text{sf,1} - \dot{Q}_\text{r,1}
+C_\text{w}(M_\text{tot} \cdot \frac{\gls{L}_{\gls{sub:1}}}{\gls{L}}) \cdot  \frac{d \text{T}_\text{w,1}}{d t} + \frac{M_\text{tot}}{\gls{L}} (\text{T}_\text{w,1} - \text{T}_\text{w,12})  \frac{d \gls{L}_{\gls{sub:1}}}{d t} = \gls{Qdot}_\text{sf,1} - \gls{Qdot}_\text{r,1}
 \end{equation}\\
 
 \begin{center}
 \textit{Constitutive equation}\\
 \end{center}
 \begin{equation}
-\text{T}_\text{w,12} = \frac{   \text{T}_\text{w,1} \text{L}_\text{2}  + \text{T}_\text{w,2}\text{L}_\text{1}      }{  \text{L}_\text{1} + \text{L}_\text{2}         } 
+\text{T}_\text{w,12} = \frac{   \text{T}_\text{w,1} \gls{L}_{\gls{sub:2}}  + \text{T}_\text{w,2}\gls{L}_{\gls{sub:1}}      }{  \gls{L}_{\gls{sub:1}} + \gls{L}_{\gls{sub:2}}         } 
 \end{equation}
 
 \begin{equation}
@@ -236,17 +240,17 @@ L= const.
 
 Energy balance:\\
 \begin{equation}
-\rho_\text{sf} A_\text{sf} [\text{L}_\text{1} \cdot  \frac{d h_\text{sf,1}}{d t} +  (\text{h}_\text{sf,1} - \text{h}_\text{sf,12})  \frac{d \text{L}_\text{1}}{d t}] = \dot{m}_\text{sf} ({h}_\text{sf,in} - h_\text{sf,12} ) + \dot{Q}_\text{sf,1} 
+\rho_\text{sf} A_\text{sf} [\gls{L}_{\gls{sub:1}} \cdot  \frac{d h_\text{sf,1}}{d t} +  (\text{h}_\text{sf,1} - \text{h}_\text{sf,12})  \frac{d \gls{L}_{\gls{sub:1}}}{d t}] = \gls{mdot}_\text{sf} ({h}_\text{sf,in} - h_\text{sf,12} ) + \gls{Qdot}_\text{sf,1} 
 \end{equation}
 
 \begin{center}
 \textit{Constitutive equations}\\
 \end{center}
 \begin{equation}
-h_\text{sf,12} = \frac{   \text{h}_\text{sf,1} \text{L}_\text{2}  + \text{h}_\text{sf,2}\text{L}_\text{1}      }{  \text{L}_\text{1} + \text{L}_\text{2}         } 
+h_\text{sf,12} = \frac{   \text{h}_\text{sf,1} \gls{L}_{\gls{sub:2}}  + \text{h}_\text{sf,2}\gls{L}_{\gls{sub:1}}      }{  \gls{L}_{\gls{sub:1}} + \gls{L}_{\gls{sub:2}}         } 
 \end{equation}
 \begin{equation}
-{Q}_\text{sf,1} = = \pi \text{D} \text{L}_\text{1} U_\text{sf,1} (T_\text{w,1} - \bar{T}_\text{sf,1})
+{Q}_\text{sf,1} = = \pi \text{D} \gls{L}_{\gls{sub:1}} U_\text{sf,1} (T_\text{w,1} - \bar{T}_\text{sf,1})
 \end{equation}
 \begin{equation}
 sfzone1 = setState(p1,h_{sf,1})
@@ -270,26 +274,26 @@ T_\text{sf,1} = temperature(sfzone1)
 \end{center}
 Mass balance:\\
 \begin{equation}
-\text{A}[\text{L}_\text{2}  \cdot \frac{d \bar{\rho}_\text{2}}{d t} + (\bar{\rho}_\text{2} - \rho_\text{g}) \cdot \frac{d \text{L}_\text{2}}{d t} + (\rho_\text{l} - \rho_\text{g}) \cdot \frac{d \text{L}_\text{1}}{d t}] =  \dot{m}_\text{A} -  \dot{m}_\text{B}
+\gls{A}\left[\gls{L}_{\gls{sub:2}}  \cdot \frac{d \gls{rhobar}_{\gls{sub:2}}}{d t} + (\gls{rhobar}_{\gls{sub:2}} - \rho_{\gls{sub:v}}) \cdot \frac{d \gls{L}_{\gls{sub:2}}}{d t} + (\rho_{\gls{sub:l}} - \rho_{\gls{sub:v}}) \cdot \frac{d \gls{L}_{\gls{sub:1}}}{d t}\right] =  \gls{mdot}_\text{A} -  \gls{mdot}_{\gls{sub:23}}
 \end{equation}
 
 \begin{flushleft}
 Energy balance:\\
 \end{flushleft}
 \begin{equation}
-\text{A}[\text{L}_\text{2} \cdot  \frac{d \bar{\rho}_\text{2} \bar{h}_\text{2}}{d t} +  (\bar{\rho}_\text{2}\bar{h}_\text{2} - \rho_\text{g}h_\text{g}) \cdot \frac{d \text{L}_\text{2}}{d t}  +  (\rho_\text{l}h_\text{l} - \rho_\text{g}h_\text{g}) \cdot \frac{d \text{L}_\text{1}}{d t}       -   \text{L}_\text{2} \cdot  \frac{d p_\text{2}}{d t} ] =  \dot{m}_\text{A}  \dot{h}_\text{A} -  \dot{m}_\text{B} \dot{h}_\text{B} + \dot{Q}_\text{r,2}
+\gls{A}\left[\gls{L}_{\gls{sub:2}} \cdot  \frac{d \gls{rhobar}_{\gls{sub:2}} \gls{hbar}_{\gls{sub:2}}}{d t} +  (\gls{rhobar}_{\gls{sub:2}}\gls{hbar}_{\gls{sub:2}} - \rho_{\gls{sub:v}}h_{\gls{sub:v}}) \cdot \frac{d \gls{L}_{\gls{sub:2}}}{d t}  +  (\rho_{\gls{sub:l}}h_{\gls{sub:l}} - \rho_{\gls{sub:v}}h_{\gls{sub:v}}) \cdot \frac{d \gls{L}_{\gls{sub:1}}}{d t}       -   \gls{L}_{\gls{sub:2}} \cdot  \frac{d p_{\gls{sub:2}}}{d t} \right] =  \gls{mdot}_\text{A}  \dot{h}_\text{A} -  \gls{mdot}_{\gls{sub:23}} \dot{h}_{\gls{sub:23}} + \gls{Qdot}_\text{r,2}
 \end{equation}
 
 
 
 \begin{equation}
-\frac{d \bar{\rho}_\text{2}}{d t} = ( \frac{\partial \rho_\text{g}}{\partial p_\text{2}} \cdot \bar{\alpha} +  \frac{\partial \rho_\text{l}}{\partial p_\text{2}} \cdot  (1 - \bar{\alpha})) \cdot  \frac{d p_\text{2}}{d t} + (\rho_\text{g} - \rho_\text{l}) \cdot [\frac{\partial \bar{\alpha}}{\partial p_\text{2}} \cdot  \frac{d p_\text{2}}{d t} + \frac{\partial \bar{\alpha}}{\partial h_\text{OUT,alpha}} \cdot \frac{d h_\text{OUT,alpha}}{d t} ]
+\frac{d \gls{rhobar}_{\gls{sub:2}}}{d t} = ( \frac{\partial \rho_{\gls{sub:v}}}{\partial p_{\gls{sub:2}}} \cdot \bar{\alpha} +  \frac{\partial \rho_{\gls{sub:l}}}{\partial p_{\gls{sub:2}}} \cdot  (1 - \bar{\alpha})) \cdot  \frac{d p_{\gls{sub:2}}}{d t} + (\rho_{\gls{sub:v}} - \rho_{\gls{sub:l}}) \cdot [\frac{\partial \bar{\alpha}}{\partial p_{\gls{sub:2}}} \cdot  \frac{d p_{\gls{sub:2}}}{d t} + \frac{\partial \bar{\alpha}}{\partial h_\text{OUT,alpha}} \cdot \frac{d h_\text{OUT,alpha}}{d t} ]
 \end{equation}
 
 
 \begin{equation} \begin{split}
- \frac{d \bar{\rho}_\text{2} \bar{h}_\text{2}}{d t} &=  [\bar{\alpha} \cdot ( \frac{\partial \rho_\text{g}}{\partial p_\text{2}} \cdot h_\text{g} + \frac{\partial h_\text{g}}{\partial p_\text{2}} \cdot \rho_\text{g} )  + ( 1- \bar{\alpha}) \cdot (  \frac{\partial \rho_\text{l}}{\partial p_\text{2}} \cdot h_\text{l} + \frac{\partial h_\text{l}}{\partial p_\text{2}} \cdot \rho_\text{l} )] \cdot \frac{d p_\text{2}}{d t} \\+
- &(\rho_\text{g}h_\text{g} - \rho_\text{l}h_\text{l}) \cdot  [\frac{\partial \bar{\alpha}}{\partial p_\text{2}} \cdot  \frac{d p_\text{2}}{d t} + \frac{\partial \bar{\alpha}}{\partial h_\text{OUT,alpha}} \cdot \frac{d h_\text{OUT,alpha}}{d t} ]
+ \frac{d \gls{rhobar}_{\gls{sub:2}} \gls{hbar}_{\gls{sub:2}}}{d t} &=  [\bar{\alpha} \cdot ( \frac{\partial \rho_{\gls{sub:v}}}{\partial p_{\gls{sub:2}}} \cdot h_{\gls{sub:v}} + \frac{\partial h_{\gls{sub:v}}}{\partial p_{\gls{sub:2}}} \cdot \rho_{\gls{sub:v}} )  + ( 1- \bar{\alpha}) \cdot (  \frac{\partial \rho_{\gls{sub:l}}}{\partial p_{\gls{sub:2}}} \cdot h_{\gls{sub:l}} + \frac{\partial h_{\gls{sub:l}}}{\partial p_{\gls{sub:2}}} \cdot \rho_{\gls{sub:l}} )] \cdot \frac{d p_{\gls{sub:2}}}{d t} \\+
+ &(\rho_{\gls{sub:v}}h_{\gls{sub:v}} - \rho_{\gls{sub:l}}h_{\gls{sub:l}}) \cdot  [\frac{\partial \bar{\alpha}}{\partial p_{\gls{sub:2}}} \cdot  \frac{d p_{\gls{sub:2}}}{d t} + \frac{\partial \bar{\alpha}}{\partial h_\text{OUT,alpha}} \cdot \frac{d h_\text{OUT,alpha}}{d t} ]
 \end{split}
 \end{equation}\\
 
@@ -297,28 +301,28 @@ Energy balance:\\
 \textit{Constitutive equations}
 \end{center}
 \begin{equation}
-\bar{\rho}_\text{2} = \rho_\text{g} \bar{\alpha} + \rho_\text{l} \cdot (1 - \bar{\alpha})
+\gls{rhobar}_{\gls{sub:2}} = \rho_{\gls{sub:v}} \bar{\alpha} + \rho_{\gls{sub:l}} \cdot (1 - \bar{\alpha})
 \end{equation}
 
 \begin{equation}
-\bar{\rho}_\text{2} \bar{h}_\text{2}= \rho_\text{g} h_\text{g} \bar{\alpha} + \rho_\text{l} h_\text{l} \cdot (1 - \bar{\alpha})
+\gls{rhobar}_{\gls{sub:2}} \gls{hbar}_{\gls{sub:2}}= \rho_{\gls{sub:v}} h_{\gls{sub:v}} \bar{\alpha} + \rho_{\gls{sub:l}} h_{\gls{sub:l}} \cdot (1 - \bar{\alpha})
 \end{equation}
 
 \begin{equation}
-\rho_\text{g} = dewDensity(sat)
+\rho_{\gls{sub:v}} = dewDensity(sat)
 \end{equation}
 \begin{equation}
-h_\text{g} = dewEnthalpy(sat)
+h_{\gls{sub:v}} = dewEnthalpy(sat)
 \end{equation}
 \begin{equation}
-\frac{\partial \bar{h}_\text{g}}{\partial p_\text{2}}= dDewEnthalpy\_dPressure(sat)
+\frac{\partial \gls{hbar}_{\gls{sub:v}}}{\partial p_{\gls{sub:2}}}= dDewEnthalpy\_dPressure(sat)
 \end{equation}
 
 \begin{equation}
-\bar{T}_\text{2} = temperature(sat)
+\bar{T}_{\gls{sub:2}} = temperature(sat)
 \end{equation}
 \begin{equation}
-\dot{Q}_\text{r,2} = \pi \text{D} \text{L}_\text{2} U_\text{pf,2} (T_\text{w,2} - \bar{T}_\text{2})
+\gls{Qdot}_\text{r,2} = \pi \text{D} \gls{L}_{\gls{sub:2}} U_\text{pf,2} (T_\text{w,2} - \bar{T}_{\gls{sub:2}})
 \end{equation}
 
 
@@ -331,7 +335,7 @@ h_\text{g} = dewEnthalpy(sat)
 \end{center}
 Energy balance:\\
 \begin{equation}
-C_\text{w} \cdot \frac{M_\text{tot}}{\text{L}} \cdot [\text{L}_\text{2} \cdot  \frac{d \text{T}_\text{w,2}}{d t} +  (\text{T}_\text{w,12} - \text{T}_\text{w,23})  \frac{d \text{L}_\text{1}}{d t} +  (\bar{\text{T}}_\text{2} - \text{T}_\text{w,23})  \frac{d \text{L}_\text{2}}{d t}] = \dot{Q}_\text{sf,2} - \dot{Q}_\text{r,2}
+C_\text{w} \cdot \frac{M_\text{tot}}{\gls{L}} \cdot [\gls{L}_{\gls{sub:2}} \cdot  \frac{d \text{T}_\text{w,2}}{d t} +  (\text{T}_\text{w,12} - \text{T}_\text{w,23})  \frac{d \gls{L}_{\gls{sub:1}}}{d t} +  (\bar{\text{T}}_{\gls{sub:2}} - \text{T}_\text{w,23})  \frac{d \gls{L}_{\gls{sub:2}}}{d t}] = \gls{Qdot}_\text{sf,2} - \gls{Qdot}_\text{r,2}
 \end{equation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  ZONE 2 SECONDARY FLUID  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -343,14 +347,14 @@ C_\text{w} \cdot \frac{M_\text{tot}}{\text{L}} \cdot [\text{L}_\text{2} \cdot  \
 \end{center}
 Energy balance:
 \begin{equation}
-\rho_\text{sf} A_\text{sf} [\text{L}_\text{2} \cdot  \frac{d h_\text{sf,2}}{d t} +  (\text{h}_\text{sf,12} - \text{h}_\text{sf,23})  \frac{d \text{L}_\text{1}}{d t} (\text{h}_\text{sf,2} - \text{h}_\text{sf,23})  \frac{d \text{L}_\text{2}}{d t}] = \dot{m}_\text{sf} ({h}_\text{sf,12} - h_\text{sf,23} ) + \dot{Q}_\text{sf,1} 
+\gls{rho}_\text{sf} A_\text{sf} \left[\gls{L}_{\gls{sub:2}} \cdot  \frac{d h_\text{sf,2}}{d t} +  (\text{h}_\text{sf,12} - \text{h}_\text{sf,23})  \frac{d \gls{L}_{\gls{sub:1}}}{d t} (\text{h}_\text{sf,2} - \text{h}_\text{sf,23})  \frac{d \gls{L}_{\gls{sub:2}}}{d t}\right] = \gls{mdot}_\text{sf} ({h}_\text{sf,12} - h_\text{sf,23} ) + \gls{Qdot}_\text{sf,1} 
 \end{equation}
 \begin{center}
 \textit{Constitutive equations}
 \end{center}
 
 \begin{equation}
-{Q}_\text{sf,2} = = \pi \text{D} \text{L}_\text{2} U_\text{sf,2} (T_\text{w,2} - \bar{T}_\text{sf,2})
+{Q}_\text{sf,2} = = \pi \text{D} \gls{L}_{\gls{sub:2}} U_\text{sf,2} (T_\text{w,2} - \bar{T}_\text{sf,2})
 \end{equation}
 \begin{equation}
 sfzone2 = setState(p2,h_{sf,2})
@@ -373,23 +377,23 @@ sfzone2 = setState(p2,h_{sf,2})
 \end{center}
 Mass balance:
 \begin{equation}
-\text{A} [\text{L}_\text{3}  \cdot \frac{d \bar{\rho}_\text{3}}{d t} + (\rho_\text{g} - \bar{\rho}_\text{3}) \cdot (\frac{d \text{L}_\text{1}}{d t} + \frac{d \text{L}_\text{2}}{d t})] = \dot{m}_\text{B} -  \dot{m}_\text{OUT}
+\text{A} [\gls{L}_{\gls{sub:3}}  \cdot \frac{d \gls{rhobar}_{\gls{sub:3}}}{d t} + (\rho_{\gls{sub:v}} - \gls{rhobar}_{\gls{sub:3}}) \cdot (\frac{d \gls{L}_{\gls{sub:1}}}{d t} + \frac{d \gls{L}_{\gls{sub:2}}}{d t})] = \gls{mdot}_{\gls{sub:23}} -  \gls{mdot}_{\gls{sub:out}}
 \end{equation}
 \begin{flushleft}
 Energy balance:
 \end{flushleft}
 \begin{equation}
-\text{A}\text{L}_\text{3}[\bar{\rho}_\text{3} \cdot \frac{d \bar{h}_\text{3}}{d t} + \bar{h}_\text{3} \cdot \frac{d \bar{\rho}_\text{3}}{d t}  -  \frac{d p_\text{3}}{d t}] + \text{A}(\rho_\text{g}h_\text{g} - \bar{\rho}_\text{3}\bar{h}_\text{3})\cdot (\frac{d \text{L}_\text{1}}{d t} + \frac{d \text{L}_\text{2}}{d t} ) = \dot{m}_\text{B}  \dot{h}_\text{g} -  \dot{m}_\text{OUT} \dot{h}_\text{OUT} + \dot{Q}_\text{r,3}
+\text{A}\gls{L}_{\gls{sub:3}}[\gls{rhobar}_{\gls{sub:3}} \cdot \frac{d \gls{hbar}_{\gls{sub:3}}}{d t} + \gls{hbar}_{\gls{sub:3}} \cdot \frac{d \gls{rhobar}_{\gls{sub:3}}}{d t}  -  \frac{d p_{\gls{sub:3}}}{d t}] + \text{A}(\rho_{\gls{sub:v}}h_{\gls{sub:v}} - \gls{rhobar}_{\gls{sub:3}}\gls{hbar}_{\gls{sub:3}})\cdot (\frac{d \gls{L}_{\gls{sub:1}}}{d t} + \frac{d \gls{L}_{\gls{sub:2}}}{d t} ) = \gls{mdot}_{\gls{sub:23}}  \dot{h}_{\gls{sub:v}} -  \gls{mdot}_{\gls{sub:out}} \dot{h}_{\gls{sub:out}} + \gls{Qdot}_\text{r,3}
 \end{equation}
 
 
 \begin{equation}
-\frac{d \bar{\rho}_\text{3}}{d t} = [ \frac{\partial \bar{\rho}_\text{3}}{\partial p_\text{3}} + \frac{1}{2} \cdot \frac{\partial \bar{\rho}_\text{3}}{\partial \bar{h}_\text{3}} \cdot \frac{\partial \bar{h}_\text{g}}{\partial p_\text{3}}] \frac{d p_\text{3}}{d t} + \frac{1}{2} \cdot \frac{\partial \bar{\rho}_\text{3}}{\partial \bar{h}_\text{3}}  \cdot \frac{d h_\text{OUT}}{d t}
+\frac{d \gls{rhobar}_{\gls{sub:3}}}{d t} = [ \frac{\partial \gls{rhobar}_{\gls{sub:3}}}{\partial p_{\gls{sub:3}}} + \frac{1}{2} \cdot \frac{\partial \gls{rhobar}_{\gls{sub:3}}}{\partial \gls{hbar}_{\gls{sub:3}}} \cdot \frac{\partial \gls{hbar}_{\gls{sub:v}}}{\partial p_{\gls{sub:3}}}] \frac{d p_{\gls{sub:3}}}{d t} + \frac{1}{2} \cdot \frac{\partial \gls{rhobar}_{\gls{sub:3}}}{\partial \gls{hbar}_{\gls{sub:3}}}  \cdot \frac{d h_{\gls{sub:out}}}{d t}
 \end{equation}
 
 
 \begin{equation}
-\frac{d \bar{h}_\text{3}}{d t} = \frac{1}{2} \cdot [\frac{\partial \bar{h}_\text{g}}{\partial p_\text{3}} \cdot \frac{d p_\text{3}}{d t} + \frac{d h_\text{OUT}}{d t}]
+\frac{d \gls{hbar}_{\gls{sub:3}}}{d t} = \frac{1}{2} \cdot [\frac{\partial \gls{hbar}_{\gls{sub:v}}}{\partial p_{\gls{sub:3}}} \cdot \frac{d p_{\gls{sub:3}}}{d t} + \frac{d h_{\gls{sub:out}}}{d t}]
 \end{equation}\\
 
 \begin{center}
@@ -397,22 +401,22 @@ Energy balance:
 \end{center}
 
 \begin{equation}
-vap = setState(p_\text{3},\bar{h}_\text{3})
+vap = setState(p_{\gls{sub:3}},\gls{hbar}_{\gls{sub:3}})
 \end{equation}
 \begin{equation}
-\bar{h}_\text{3} = \frac{1}{2}(h_\text{g} - h_\text{OUT})
+\gls{hbar}_{\gls{sub:3}} = \frac{1}{2}(h_{\gls{sub:v}} - h_{\gls{sub:out}})
 \end{equation}
 \begin{equation}
-\frac{\partial \bar{\rho}_\text{3}}{\partial \bar{h}_\text{3}}= density\_derh\_p(vap)
+\frac{\partial \gls{rhobar}_{\gls{sub:3}}}{\partial \gls{hbar}_{\gls{sub:3}}}= density\_derh\_p(vap)
 \end{equation}
 \begin{equation}
-\frac{\partial \bar{\rho}_\text{3}}{\partial p_\text{3}}= density\_derp\_h(vap)
+\frac{\partial \gls{rhobar}_{\gls{sub:3}}}{\partial p_{\gls{sub:3}}}= density\_derp\_h(vap)
 \end{equation}
 \begin{equation}
-\bar{T}_\text{3} = temperature(vap)
+\bar{T}_{\gls{sub:3}} = temperature(vap)
 \end{equation}
 \begin{equation}
-\dot{Q}_\text{r,3} = \pi \text{D} \text{L}_\text{3} U_\text{pf,3} (T_\text{w,3} - \bar{T}_\text{3})
+\gls{Qdot}_\text{r,3} = \pi \text{D} \gls{L}_{\gls{sub:3}} U_\text{pf,3} (T_\text{w,3} - \bar{T}_{\gls{sub:3}})
 \end{equation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% ZONE 3 METAL WALL  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -422,7 +426,7 @@ vap = setState(p_\text{3},\bar{h}_\text{3})
 \end{center}
 Energy balance:
 \begin{equation}
-C_\text{w}\frac{M_\text{tot}}{L} \cdot [ \text{L}_\text{3} \cdot  \frac{d \text{T}_\text{w,3}}{d t} + (\text{T}_\text{w,23} - \text{T}_\text{w,3})  (\frac{d \text{L}_\text{1}}{d t} + \frac{d \text{L}_\text{2}}{d t})]= \dot{Q}_\text{sf,3} - \dot{Q}_\text{r,3}
+C_\text{w}\frac{M_\text{tot}}{L} \cdot [ \gls{L}_{\gls{sub:3}} \cdot  \frac{d \text{T}_\text{w,3}}{d t} + (\text{T}_\text{w,23} - \text{T}_\text{w,3})  (\frac{d \gls{L}_{\gls{sub:1}}}{d t} + \frac{d \gls{L}_{\gls{sub:2}}}{d t})]= \gls{Qdot}_\text{sf,3} - \gls{Qdot}_\text{r,3}
 \end{equation}
 
 \begin{center}
@@ -430,7 +434,7 @@ C_\text{w}\frac{M_\text{tot}}{L} \cdot [ \text{L}_\text{3} \cdot  \frac{d \text{
 \end{center}
 
 \begin{equation}
-\text{T}_\text{w,23} = \frac{   \text{T}_\text{w,3} \text{L}_\text{2}  + \text{T}_\text{w,2}\text{L}_\text{3}      }{  \text{L}_\text{2} + \text{L}_\text{3}         } 
+\text{T}_\text{w,23} = \frac{   \text{T}_\text{w,3} \gls{L}_{\gls{sub:2}}  + \text{T}_\text{w,2}\gls{L}_{\gls{sub:3}}      }{  \gls{L}_{\gls{sub:2}} + \gls{L}_{\gls{sub:3}}         } 
 \end{equation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% ZONE 3 SECONDARY FLUID  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -440,17 +444,17 @@ C_\text{w}\frac{M_\text{tot}}{L} \cdot [ \text{L}_\text{3} \cdot  \frac{d \text{
 \end{center}
 Energy balance:\\
 \begin{equation}
-\rho_\text{sf} A_\text{sf} [\text{L}_\text{3} \cdot  \frac{d \bar{h}_\text{sf,3}}{d t} +  (\text{h}_\text{sf,23} - \text{h}_\text{sf,3}) ( \frac{d \text{L}_\text{1}}{d t} + \frac{d \text{L}_\text{2}}{d t})] = \dot{m}_\text{sf} ({h}_\text{sf,23} - h_\text{sf,OUT} ) + \dot{Q}_\text{sf,3} 
+\rho_\text{sf} A_\text{sf} [\gls{L}_{\gls{sub:3}} \cdot  \frac{d \gls{hbar}_\text{sf,3}}{d t} +  (\text{h}_\text{sf,23} - \text{h}_\text{sf,3}) ( \frac{d \gls{L}_{\gls{sub:1}}}{d t} + \frac{d \gls{L}_{\gls{sub:2}}}{d t})] = \gls{mdot}_\text{sf} ({h}_\text{sf,23} - h_\text{sf,OUT} ) + \gls{Qdot}_\text{sf,3} 
 \end{equation}
 \begin{center}
 \textit{Constitutive equations}
 \end{center}
 
 \begin{equation}
-h_\text{sf,23} = \frac{   \text{h}_\text{sf,3} \text{L}_\text{2}  + \text{h}_\text{sf,2}\text{L}_\text{3}      }{  \text{L}_\text{2} + \text{L}_\text{3}         } 
+h_\text{sf,23} = \frac{   \text{h}_\text{sf,3} \gls{L}_{\gls{sub:2}}  + \text{h}_\text{sf,2}\gls{L}_{\gls{sub:3}}      }{  \gls{L}_{\gls{sub:2}} + \gls{L}_{\gls{sub:3}}         } 
 \end{equation}
 \begin{equation}
-{Q}_\text{sf,3} = = \pi \text{D} \text{L}_\text{3} U_\text{sf,3} (T_\text{w,3} - \bar{T}_\text{sf,3})
+\gls{Q}_\text{sf,3} = \pi \text{D} \gls{L}_{\gls{sub:3}} \gls{U}_\text{sf,3} (\gls{T}_\text{w,3} - \gls{Tbar}_\text{sf,3})
 \end{equation}
 \begin{equation}
 sfzone3 = setState(p3,h_{sf,3})
@@ -499,5 +503,24 @@ Compared to \cite{Kaern2011b}, the model ....
 %\section{Nomenclature}
 %\printindex
 %\printglossaries
+
+\section{Modelling}
+
+\subsection{Modelica Characteristics}
+
+\begin{itemize}
+\item Enthalpy controls switching
+\item Only length gets defined, no zones get disabled. Their respective length might be set to \num{e-10} though. 
+\item Solid wall with constant properties is included in the cell of the primary fluid. 
+\item A secondary fluid is assumed to be incompressible, for now. This is our second component. 
+\item Should length $L$ be treated as input, output or as a variable in the connectors?
+\item Implementation of heat transfer and void fractions models starting with \cite{Kaern2011b} and Sylvain's EES file.
+\end{itemize}
+
+
+
+
+
+
 
 \end{document}
