added symbols to nomenclature, not finished yet.

--- a/doc/notes.tex
+++ b/doc/notes.tex
@@ -155,12 +155,12 @@ Energy balance\\
 \end{equation}
 
 \begin{equation}
-\frac{d \gls{rhobar}_{\gls{sub:1}}}{d t} = [ \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial p_{\gls{sub:1}}} + \frac{1}{2} \cdot \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial \gls{hbar}_{\gls{sub:1}}} \cdot \frac{\partial h_{\gls{sub:l}}}{\partial p_{\gls{sub:1}}}] \frac{d p_{\gls{sub:1}}}{d t} + \frac{1}{2} \cdot \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial \gls{hbar}_{\gls{sub:1}}}  \cdot \frac{d h_{\gls{sub:in}}}{d t}
+\frac{d \gls{rhobar}_{\gls{sub:1}}}{d \gls{t}} = \left[ \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial p_{\gls{sub:1}}} + \frac{1}{2} \cdot \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial \gls{hbar}_{\gls{sub:1}}} \cdot \frac{\partial \gls{h}_{\gls{sub:l}}}{\partial \gls{p}_{\gls{sub:1}}}\right] \frac{d \gls{p}_{\gls{sub:1}}}{d \gls{t}} + \frac{1}{2} \cdot \frac{\partial \gls{rhobar}_{\gls{sub:1}}}{\partial \gls{hbar}_{\gls{sub:1}}}  \cdot \frac{d \gls{h}_{\gls{sub:in}}}{d \gls{t}}
 \end{equation}
 
 
 \begin{equation}
-\frac{d \gls{hbar}_{\gls{sub:1}}}{d t} = \frac{1}{2} \cdot [\frac{\partial \gls{hbar}_{\gls{sub:l}}}{\partial p_{\gls{sub:1}}} \cdot \frac{d p_{\gls{sub:1}}}{d t} + \frac{d h_{\gls{sub:in}}}{d t}]
+\frac{d \gls{hbar}_{\gls{sub:1}}}{d \gls{t}} = \frac{1}{2} \cdot \left[\frac{\partial \gls{hbar}_{\gls{sub:l}}}{\partial p_{\gls{sub:1}}} \cdot \frac{d \gls{p}_{\gls{sub:1}}}{d \gls{t}} + \frac{d \gls{h}_{\gls{sub:in}}}{d \gls{t}}\right]
 \end{equation}
 \\
 \begin{center}
